# Diagrams

runtime/: .gitignore  CMakeLists.txt  FindNACL.cmake  README.md  typedefs.h
runtime/application/: CMakeLists.txt  demo_board.h  sdl_interface.cpp  sdl_interface.h
runtime/cmake/: nacl_toolchain.cmake
runtime/cmake/modules/: FindBox2D.cmake  FindBulletPhysics.cmake  FindClipper.cmake  FindEigen3.cmake  FindGLES2.cmake  FindJsonCpp.cmake  FindNaCl.cmake  FindPoly2Tri.cmake  FindSDL2.cmake
runtime/draw/: camera.cpp  camera.h  drawer.cpp  drawer.h  gl_utility.cpp  gl_utility.h  sdl_ttf_drawer.cpp  sdl_ttf_drawer.h
runtime/geometry/: CMakeLists.txt  aabb.h  coordinate_frame.cpp  coordinate_frame.h  geometry2.cpp  geometry2.h  geometry3.h  triangulate.cpp  triangulate.h  triangulation_datastructure.cpp  triangulation_datastructure.h
runtime/gl/: CMakeLists.txt  drawer.cpp  drawer.h  sdl_ttf_drawer.cpp  sdl_ttf_drawer.h
runtime/glfw/: CMakeLists.txt  window.cpp  window.h
runtime/include/: matrix_types.h  typedefs.h
runtime/jsonfiles/: joint_def.json  path.json  path_simple.json
runtime/nacl/: CMakeLists.txt  nacl_drawer.cpp  nacl_drawer.h  nacl_interface.cpp  nacl_interface.h
runtime/nacl_example/pinball/: frag.shader  index.html  path_simple.json  vert.shader
runtime/nacl_example/pinball/clang-newlib/Release/: pinball.nmf
runtime/nacl_example/pinball/pnacl/Release/: pinball.pexe
runtime/physics/: CMakeLists.txt  node.cpp  node.h  physics_engine.h  physics_engine_bullet.cpp  physics_engine_bullet.h  physics_engine_demo.cpp  physics_engine_demo.h  physics_engine_liquidfun.cpp  physics_engine_liquidfun.h  world.cpp  world.h
runtime/render/: CMakeLists.txt  drawer.cpp  drawer.h  window.cpp  window.h
runtime/sdl/: CMakeLists.txt  drawer.cpp  drawer.h  nacl_drawer.cpp  nacl_drawer.h  sdl_interface.cpp  sdl_interface.h
runtime/shaders/: frag.shader  vert.shader
runtime/test/geometry/: CMakeLists.txt  test_coordinate.cpp  test_coordinate.h
runtime/testbed/: CMakeLists.txt  main.cpp
runtime/utility/: CMakeLists.txt  event_handler.cpp  event_handler.h  game_timer.cpp  game_timer.h  json_parser.cpp  json_parser.h  map.h  state_machine.h  stl_memory.h  timer.cpp  timer.h  world_parser.cpp  world_parser.h
