file(GLOB sources "*.cpp") 
file(GLOB headers "*.h")
add_executable(main ${sources} ${headers})
if(NACL)
  set(SDL_FLAG "-Wl,--undefined=PSUserMainGet")
endif()

find_package(Freetype REQUIRED)
find_package(BZip2 REQUIRED)
find_package(ZLIB REQUIRED)
find_package(PNG REQUIRED)
include_directories(${FREETYPE_INCLUDE_DIRS})
include_directories(${BZIP2_INCLUDE_DIRS})
include_directories(${ZLIB_INCLUDE_DIRS})
include_directories(${PNG_INCLUDE_DIRS})

target_link_libraries(main ${SDL_FLAG} diagrender diagphysics diaggeometry diagutility ${JSONCPP_LIBRARIES} ${POLY2TRI_LIBRARIES} ${LIQUIDFUN_LIBRARIES} ${SDL2_LIBRARIES} ${FREETYPE_LIBRARIES} ${PNG_LIBRARIES} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES} ${OPENGL_LIBRARIES} ${NACL_LIBRARIES})