INCLUDE_DIRECTORIES("${NACL_SDK_ROOT}/include")
FIND_LIBRARY(PPAPI_CPP_LIB NAMES ppapi_cpp PATHS /)
FIND_LIBRARY(PPAPI_LIB NAMES ppapi)
FIND_LIBRARY(NACL_IO_LIB NAMES nacl_io PATHS /)
FIND_LIBRARY(PPAPI_GLES2_LIB NAMES ppapi_gles2 PATHS /)
FILE(GLOB sources "*.cpp") 
FILE(GLOB headers "*.h")
ADD_EXECUTABLE(naclmodule ${sources} ${headers})
TARGET_LINK_LIBRARIES(naclmodule diagphysics diaggeometry diagutility ${JSON_LIBRARIES} ${POLY2TRI_LIBRARIES} ${LIQUIDFUN_LIBRARIES}  ${PPAPI_GLES2_LIB} ${PPAPI_CPP_LIB} ${PPAPI_LIB} ${NACL_IO_LIB})