include_directories("${NACL_SDK_ROOT}/include")
find_library(PPAPI_CPP_LIB NAMES ppapi_cpp PATHS /)
find_library(PPAPI_LIB NAMES ppapi)
find_library(NACL_IO_LIB NAMES nacl_io PATHS /)
find_library(PPAPI_GLES2_LIB NAMES ppapi_gles2 PATHS /)
file(GLOB sources "*.cpp") 
file(GLOB headers "*.h")
add_executable(naclmodule ${sources} ${headers})
target_link_libraries(naclmodule diagphysics diaggeometry diagutility ${JSON_LIBRARIES} ${POLY2TRI_LIBRARIES} ${LIQUIDFUN_LIBRARIES}  ${PPAPI_GLES2_LIB} ${PPAPI_CPP_LIB} ${PPAPI_LIB} ${NACL_IO_LIB})